Fixed the nav, added some media queries and got the about me semi-ready.
Need to add some JS to the card to hide text, but temporarily put a background color on the body so that it doesn't look too bad.

--- a/res/css/core.css
+++ b/res/css/core.css
@@ -3,7 +3,7 @@ body{
 *//*	background-color: #1A1A1D; */	
 /*	background: url("/res/img/trees_wallpaper.jpeg") no-repeat center center fixed; 
 */    
-    
+    background-color: #343a40;
     font-family: "Futura";
 }
 
@@ -31,7 +31,6 @@ span {
 }
 
 h1{
-	padding-top: 25px;
 	text-align: center;
 	font-family: bebas_neueregular;
 	letter-spacing: 1px;
@@ -87,14 +86,14 @@ h1{
     height: 50vh;
 }
 
-h1{
-	color: white;
-	font-size: 5em;
-}
-
 .container{
 	padding: 10px;
     margin: 0 auto;
+}
+
+.btn{
+	color:white;
+	margin-left: 10px;
 }
 
 .btn-primary{
@@ -104,7 +103,15 @@ h1{
 	padding: 10 auto;
 }
 
+.navbar{
+		font-family: bebas_neueregular;
+		letter-spacing: 2px;
+		height: 5px;
+
+}
+
 .nav{
+	height: 40px;
 	width: 100%;
 	max-width: 100%;
 	min-width: 100%;
@@ -117,6 +124,84 @@ h1{
 	color: white;
 }
 
+
+.navbar {
+  min-height: 80px;
+}
+
+.navbar-brand {
+  padding: 0 15px;
+  height: 20px;
+  line-height: 20px;
+}
+
+
+.btn-primary-outline {
+  background-color: transparent;
+  border-color: #ccc;
+  color: white;
+}
+
+.card{
+	margin: 0 auto; 
+    float: none; 
+    margin-bottom: 10px;
+	width: 80%;
+}
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 0px) { 
+	.navbar {
+	  min-height: 70px;
+	  font-size: 8px;
+	}
+
+	.card{
+		margin-top: 125px;
+		font-size: 0.7em;
+	}
+
+	h1{
+		padding-top: 100px;
+		color: white;
+	}
+}
+
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 600px) { 
+	h1{
+		color: white;
+		padding-top: 70px;
+		font-size: 5em;
+	}
+
+	.card{
+		margin-top: 125px;
+		font-size: 1em;
+	}
+}
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { 
+	h1{
+		color: white;
+		font-size: 0.em;
+		padding-top: 80px;
+	}
+	.navbar {
+	  	min-height: 50px;
+	}
+}
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { 
+	h1{
+		color: white;
+		font-size: 6em;
+		padding-top: 80px;
+
+	}
+}
 .second-button{
     float:right;
 }
+
