--- a/res/css/indexcss.css
+++ b/res/css/indexcss.css
@@ -247,11 +247,3 @@ hr {
  .showmorecontainer{
 	border-style: none;
  }
-
-.parallax {
-    background-image: url("/res/img//blurredai.png");
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
